# gong-nl-db-mcp

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/gong_nl_db_mcp/: __init__.py  db.py  formatting.py  safety.py  server.py
tests/: test_safety.py
